samples/_failures_safe/1761730865_7e68c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47bd8321.c: In function ‘main’:
./samples/SAFE/__tmp_47bd8321.c:162:13: error: expected declaration or statement at end of input
  162 |             continue;
      |             ^~~~~~~~
./samples/SAFE/__tmp_47bd8321.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47bd8321.c:162:13: error: expected declaration or statement at end of input
